--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
+    "expo-font": "^12.0.10",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-root-toast": "^3.6.0",
     "react-native-svg": "^15.7.1"
   },
   "devDependencies": {
